rns-lang/tests/snapshots/lexer-directives-unknown_directive_as_second_token.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class .unknown_directive HelloWorld
.end
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ tests/testdata/lexer/directives/unknown_directive_as_second_token.ja:1:8 ]
   │
 1 │ .class .unknown_directive HelloWorld
   │        ─────────┬────────  
   │                 ╰────────── The directive '.unknown_directive' is not recognized
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .limit
───╯
